2011-07-31  Charlie Zender  <zender@uci.edu>

	* Finish dynamic array implementation of group stack

2011-07-28  Charlie Zender  <zender@uci.edu>

	* Embed include <sys/resource.h> within #ifdef HAVE_GETRUSAGE for
	older GNU compilers, e.g., gcc 3.4.x.

2011-07-25  Charlie Zender  <zender@uci.edu>

	* Finished implementing NCO wrappers for group API

	* Group patches read/write (but do not populate) selected groups

	* Group stubs compile, build, and cause no regressions

2011-07-24  Charlie Zender  <zender@uci.edu>

	* Integrate nco_grp_utl.[ch] into build system

	* Revert to using NC_NOFILL on all writes, thus presuming netCDF 4.1.3

	* Add nco_grp_utl.[ch] and get to compile

2011-07-22  Charlie Zender  <zender@uci.edu>

	* NCO 4.0.9 release procedure:
 	Changes since nco-4_0_8:
	cd ~/nco;cvs tag -d nco-4_0_9;cvs tag -d nco-4_0_9-1
	cd ~/nco;cvs commit -m "Preparing nco-4.0.9 release"
	cvs tag -c nco-4_0_9;cvs tag -c nco-4_0_9-1

	* Add secret hooks to ncks -g flag for group sub-setting

2011-07-15  Charlie Zender  <zender@uci.edu>

	* Remove last known USE_FORTRAN_ARITHMETIC token

2011-07-14  Charlie Zender  <zender@uci.edu>

	* More clean-up of ncap2 documentation

2011-06-27  Charlie Zender  <zender@uci.edu>

	* Clean-up UDUnits in preparation for solving TODO nco1022

	* Verify dpkg-buildpackage produces netCDF4-, UDUnits2-, DAP-enable NCO
	against current daily snapshot of netCDF 4.1.3, HDF 1.8.7.

	* Verify pbuilder          produces netCDF4-, UDUnits2-, DAP-enable NCO
	against current debian Sid

	* Incorporate more useful hints from Denis Heimbigner when DAP fails

2011-06-26  Charlie Zender  <zender@uci.edu>

	* Remove UDUNITS section of configure.in because it was overly
	complex to maintain with UDUNITS2 which supercedes it

	* Remove DAP-OPENDAP section of configure.in because it was overly
	complex to maintain with DAP-NETCDF which supercedes it

	* Re-introduce ENABLE_NETCDF4
